--- a/Pages/ofArray.html
+++ b/Pages/ofArray.html
@@ -85,6 +85,10 @@
                     <a href="">
                         <li class="methods-element">geometryCart</li>
                     </a>
+
+                    <a href="">
+                        <li class="methods-element">equations</li>
+                    </a>
                     <a href="">
                         <li class="methods-element">formTools</li>
                     </a>
@@ -265,7 +269,7 @@
                             </p>
 
                         </div>
-                        <p>Case 2 </p>
+                        <p>Caso de ejemplo 3 </p>
                         <div class="coding">
                             <p>
                                 <span class="keyword">console</span><span>.</span><span
