--- a/Pages/geometryCart.html
+++ b/Pages/geometryCart.html
@@ -87,6 +87,10 @@
                     <a href="">
                         <li class="methods-element">geometryCart</li>
                     </a>
+
+                    <a href="">
+                        <li class="methods-element">equations</li>
+                    </a>
                     <a href="">
                         <li class="methods-element">formTools</li>
                     </a>
