--- a/Pages/perimeterOf.html
+++ b/Pages/perimeterOf.html
@@ -86,6 +86,10 @@
                     <a href="">
                         <li class="methods-element">geometryCart</li>
                     </a>
+
+                    <a href="">
+                        <li class="methods-element">equations</li>
+                    </a>
                     <a href="">
                         <li class="methods-element">formTools</li>
                     </a>
