--- a/index.html
+++ b/index.html
@@ -88,6 +88,10 @@
                     <a href="">
                         <li class="methods-element">geometryCart</li>
                     </a>
+
+                    <a href="">
+                        <li class="methods-element">equations</li>
+                    </a>
                     <a href="">
                         <li class="methods-element">formTools</li>
                     </a>
