--- a/Pages/typeMethod.html
+++ b/Pages/typeMethod.html
@@ -5,33 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="./Css/styles.css">
-    <link rel="stylesheet" href="./Css/responsive.css">
+    <link rel="stylesheet" href="../Css/styles.css">
+    <link rel="stylesheet" href="../Css/responsive.css">
+    <link rel="stylesheet" href="../Css/tokensJs.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="shortcut icon" href="./Sources/etjslogo.png" type="image/x-icon">
-
-
-
+    <link rel="shortcut icon" href="../Sources/etjslogo.png" type="image/x-icon">
     <title>Easy Tools JS</title>
+
 </head>
 
 
 <body>
-
     <div class="container">
 
         <header class="header">
 
+
             <div class="icon">
-                <img src="./Sources/etjslogo.png" alt="" srcset="" width="50%">
+
+                <a href="../index.html"><img src="../Sources/etjslogo.png" alt="" srcset="" width="50%"> </a>
 
             </div>
+
             <p class="init">Easy Tools JS</p>
 
             <nav class="header-nav">
                 <ul class="header-nav-list">
 
+                    <a href="../index.html">
+                        <li class="header-nav-element">Inicio</li>
+                    </a>
                     <a href="">
                         <li class="header-nav-element">Descargar</li>
                     </a>
@@ -46,16 +50,11 @@
             </nav>
         </header>
 
-        <section class="hero" width="200px">
-            <img src="./Sources/heroimage.jpg" alt="">
-
-        </section>
 
         <a href="#" id="js_up" class="to-top">
 
-            <i class="fa fa-rocket" aria-hidden="true">   ^   </i>
+            <i class="fa fa-rocket" aria-hidden="true"> ^ </i>
         </a>
-
 
         <section class="main">
             <article class="nav-methods">
@@ -66,15 +65,15 @@
 
                 <ul class="methods">
 
-                    <a href="./Pages/ofArray.html">
+                    <a href="ofArray.html">
                         <li class="methods-element">ofArray</li>
                     </a>
 
-                    <a href="./Pages/areaOf.html">
+                    <a href="areaOf.html">
                         <li class="methods-element">areaOf</li>
                     </a>
 
-                    <a href="./Pages/perimeterOf.html">
+                    <a href="">
                         <li class="methods-element">perimeterOf</li>
                     </a>
 
@@ -111,10 +110,10 @@
                     <a href="">
                         <li class="methods-element">binarySearch</li>
                     </a>
-                    <a href="./Pages/sorts.html#bubbleSort">
+                    <a href="">
                         <li class="methods-element">bubbleSort</li>
                     </a>
-                    <a href="./Pages/sorts.html#quickSort">
+                    <a href="">
                         <li class="methods-element">quickSort</li>
                     </a>
                     <a href="">
@@ -128,81 +127,69 @@
                 </ul>
             </article>
             <article>
-                <h1>
-                    Sobre Easy Tools Js Lybrary.
-                </h1>
-                <div>
+                <h2>La funcion: TypeMethod</h2>
 
-                    <p class="about-et">
-                        Easy tools nace como la idea de ser un conjunto de herramientas para la resolucion
-                        de problemas recurrentes a la hora de desarollar software, ya sea del lado del front end
-                        o del backend, brindando soluciones y funcionalidades prediseñados para que sean mas sencillos
-                        algunas tareas, <strong> En la version 1.0 de Easy Tools </strong> tenemos todo tipo de
-                        herramientas que podemos implementar dentro del lenguaje javascript,
-                        desde
-                        <ul>
-                            <li>Matematicas</li>
-                            <li>Estructuras de datos</li>
-                            <li>Manejo de formularios</li>
-                            <li>Testing</li>
-                            <li>Algortimos de uso frecuente</li>
-                            <li>y demas herramientas utiles</li>
-
-                        </ul>
-                        claro esta que que este es un proyecto
-                        sencillo cuya idea
-                        es simplemente ser una pequeña herramienta mas, ademas se caracteriza por ser una libreria
-                        muy ligera, nuestra finalidad es brindar las herramientas escenciales para resolver problemas
-                        recurrentes.
-
-                    </p>
+               
+                <p>Esta funcionalidad permite comprobar el tipo del valor que retorna un metodo/funcion, recibe como
+                    parametros el llamado a la funcion y el tipo esperado, retorna true si el tipo del valor retornado
+                    metodo es igual al esperado y false si no lo es. </p>
 
 
+                <div class="method-container">
 
+
+                    <div class="coding">
+                        <p>
+                            <p class="puntuation">//Definamos una funcion para sumar 2 numeros <br>
+
+                            </p>
+                            <p>
+                                <span class="keyword">const</span> <span class="method">add</span> =
+                                <span>(n1,n2)</span> <span class="method2">=></span> <span>{
+
+                                    <span class="keyword">return</span> <span>n1 <span class="method2">+</span>
+                                        n2</span>
+
+                                    }
+                                </span>
+
+                            </p>
+                        </p>
+
+
+
+                    </div>
+                    <p> Ahora apliquemos la funcion testMethod: </p>
+                    <div class="coding">
+                        <span class="keyword">console</span><span>.</span><span class="method2">log</span><span>(<span
+                                class="method">typeMethod</span><span>(<span
+                                    class="method">add</span>(2,3),"number")</span>)</span>
+                        <br>
+                        <span class="puntuation">//La salida por consola seria: <br> >>> true </span>
+                        </p>
+
+
+                    </div>
+                    <p>Se puede tambien agregar el uno como parametro adicional (1) y hace que se devuelva un objeto con
+                        un reporte del
+                        proceso: </p>
+
+                    <div class="coding">
+                        <span class="keyword">console</span><span>.</span><span class="method2">log</span><span>(<span
+                                class="method">typeMethod</span><span>(<span
+                                    class="method">add</span>(5,9),"string",1)</span>)</span>
+                        <br>
+                        <span class="puntuation">//La salida por consola seria: <br> >>> { expetedType: 'string',
+                            typeMethod: 'number', validation: false } </span>
+                        </p>
+
+
+                    </div>
                 </div>
-            </article>
-
-
-        </section>
-        <section>
-            <h2 class="center">Descargar Easy Tools Js</h2>
-            <article class="download-github">
-
-
-                <a href="https://github.com/SMITH367/Easy-tolls" target="_blank"> Download from </a>
-                <img src="./Sources/logogithub.png" alt="" srcset="">
-
-            </article>
-            <article class="download-github">
-
-                <a href="./Sources/easyToolsmin.js" download="easyTools.js">Direct Download</a>
 
             </article>
 
         </section>
-
-        <section class="how-install">
-
-            <h3>Como instalar y usar easy tools</h3>
-            <p>Lo primero es descargar el paquete ya sea desde github o directamente desde la web</p>
-            <p>Easy tools se instala como cualquier otro modulo de EcmaScript 6.
-
-                <span>
-                </span>
-                de easy Toolsmas informacion sobre modulos javascript <a href="">aqui</a>
-            </p>
-
-        </section>
-
-        <section>
-
-            <div class="tutorial">
-                <video src="./Sources/install.mp4" controls width="90%" height="40%"></video>
-            </div>
-
-        </section>
-
-
 
         <footer>
 
@@ -210,14 +197,10 @@
                 Easy Tolls Js V1.0 </p>
 
         </footer>
-
-
     </div>
 
-
-    <script src="Js/main.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
 </body>
+
 
 </html>
